--- a/src/pricing/app-types/app-types.hbs
+++ b/src/pricing/app-types/app-types.hbs
@@ -16,7 +16,7 @@
             <div class="app-types__type">
                 <div class="app-types__type-name-container">
                     <h2 class="app-types__name">
-                        PREMIUM
+                        PLUS
                     </h2>
 
                     <span class="app-types__info">
@@ -25,7 +25,7 @@
                 </div>
 
                 <span class="app-types__name-description">
-                    Suspendise a Suspendise a Suspendise aSuspendise aSuspendise aSuspendise aSuspendise aSuspendise aSuspendise a
+                    That’s a perfect app if you need solid fundations.
                 </span>
 
                 <span class="app-types__price">
@@ -101,11 +101,11 @@
                 </div>
 
                 <span class="app-types__name-description">
-                    Suspendise a Suspendise a Suspendise aSuspendise aSuspendise aSuspendise aSuspendise aSuspendise aSuspendise a
+                    If your event is complex, that’s the app type you’re looking for. More features, more possibilities.
                 </span>
 
                 <span class="app-types__price app-types__price--premium">
-                    $ 999
+                    $ 1499
                 </span>
 
                 <ul class="app-types__features-list">
@@ -193,20 +193,20 @@
         <div class="app-types__type">
             <div class="app-types__type-name-container">
                 <h2 class="app-types__name">
-                    PREMIUM
+                    STAND-ALONE
                 </h2>
 
                 <span class="app-types__info">
-                    One year license for 1 event
+                    One year licence, multiple events possible
                 </span>
             </div>
 
             <span class="app-types__name-description">
-                Suspendise a Suspendise a Suspendise aSuspendise aSuspendise aSuspendise aSuspendise aSuspendise aSuspendise a
+                Organizing a couple of events during the year? That’s the app type for you.
             </span>
 
             <span class="app-types__price">
-                $ 999
+                $ 3500
             </span>
 
             <ul class="app-types__features-list">
@@ -268,7 +268,7 @@
             </ul>
 
             <a href="https://meetingapplication.com/get-your-app?type=standalone" class="button app-types__button app-types__button--black">
-                TEST FOR FREE FOR 14 DAYS
+                SCHEDULE A DEMO
             </a>
         </div>
     </div>
