--- a/src/pricing/difference/difference.hbs
+++ b/src/pricing/difference/difference.hbs
@@ -31,9 +31,9 @@
                 </span>
 
                 <ul class="difference__list">
-                    <li class="difference__list-element"> some </li>
-                    <li class="difference__list-element"> some </li>
-                    <li class="difference__list-element"> some </li>
+                    <li class="difference__list-element"> Event banner </li>
+                    <li class="difference__list-element"> Event logo </li>
+                    <li class="difference__list-element"> Custom colors </li>
                 </ul>
             </div>
         </div>
@@ -50,17 +50,16 @@
                 </div>
 
                 <span class="difference__company-name">
-                    Meeting
+                    Stand-alone
                 </span>
 
                 <span class="difference__company-name">
-                    Application
+                    application
                 </span>
 
                 <ul class="difference__list difference__list--right">
-                    <li class="difference__list-element difference__list-element--right"> some </li>
-                    <li class="difference__list-element difference__list-element--right"> some </li>
-                    <li class="difference__list-element difference__list-element--right"> some </li>
+                    <li class="difference__list-element difference__list-element--right"> App name & icon </li>
+                    <li class="difference__list-element difference__list-element--right"> Custom splash screen </li>
                 </ul>
             </div>
             <div class="difference__phone">
