--- a/src/pricing/hero/hero.hbs
+++ b/src/pricing/hero/hero.hbs
@@ -26,7 +26,7 @@
                 </span>
 
                 <span class="pricing-hero__company-name--small">
-                    Maecenas malesuada elit lectus  felis, malesuada ultricies.
+                    Your event inside our hosted app.
                 </span>
 
                 <a onclick="gotoAppTypes()" class="button button--medium">
@@ -48,15 +48,15 @@
                 </div>
 
                 <span class="pricing-hero__company-name">
-                    Meeting
+                    Stand-alone
                 </span>
 
                 <span class="pricing-hero__company-name">
-                    Application
+                    application
                 </span>
 
                 <span class="pricing-hero__company-name--small">
-                    Maecenas malesuada elit lectus  felis, malesuada ultricies.
+                    Your event inside your own dedicated app.
                 </span>
 
                 <a onclick="gotoAppTypes()" class="button button--medium">
