--- a/src/pricing/rest/rest-assured.hbs
+++ b/src/pricing/rest/rest-assured.hbs
@@ -10,7 +10,7 @@
                 We accept
             </span>
             <span class="rest__text-info">
-                PayPal and Credit Card payments
+                PayPayl, Credit Card, and money transfer payments
             </span>
         </div>
 
@@ -26,10 +26,10 @@
 
         <div class="rest__text rest__text--right">
             <span class="rest__text-info--blue">
-                We accept
+                30-day
             </span>
             <span class="rest__text-info">
-                PayPal and Credit Card payments
+                money back guarantee
             </span>
         </div>
     </div>
@@ -37,10 +37,10 @@
     <div class="rest__element">
         <div class="rest__text">
             <span class="rest__text-info--blue">
-                We accept
+                You don’t need
             </span>
             <span class="rest__text-info">
-                PayPal and Credit Card payments
+                to provide data about your credit card
             </span>
         </div>
 
@@ -56,10 +56,10 @@
 
         <div class="rest__text rest__text--right">
             <span class="rest__text-info--blue">
-                We accept
+                99,999%
             </span>
             <span class="rest__text-info">
-                PayPal and Credit Card payments
+                is the uptime of our servers
             </span>
         </div>
     </div>
@@ -67,10 +67,10 @@
     <div class="rest__element">
         <div class="rest__text">
             <span class="rest__text-info--blue">
-                We accept
+                Your data
             </span>
             <span class="rest__text-info">
-                PayPal and Credit Card payments
+                is encrypted and safe
             </span>
         </div>
 
