--- a/src/pricing/services/services.hbs
+++ b/src/pricing/services/services.hbs
@@ -10,7 +10,7 @@
     <article class="services__types">
         <div class="services__type">
             <h3 class="services__type-name">
-                Mike Kopyra
+                1:1 VIDEO TRAINING SESSION
             </h3>
 
             <p class="services__text">
@@ -24,11 +24,15 @@
 
         <div class="services__type">
             <h3 class="services__type-name">
-                Mike Kopyra
+                AUTOMATIC AGENDA UPLOAD
+                <br />
+                <span class="services__type-name--small">
+                    (from a .csv template)
+                </span>
             </h3>
 
             <p class="services__text">
-                Your dedicated assistant will conduct an extensive video tour of the CMS panel and show you how to manage your event.
+                If you have a complex agenta you can upload it into our system using a simple Excel template.
             </p>
 
             <a class="services__button">
@@ -38,15 +42,15 @@
 
         <div class="services__type">
             <h3 class="services__type-name">
-                Mike Kopyra
+                FULL DATA UPLOAD
             </h3>
 
             <p class="services__text">
-                Your dedicated assistant will conduct an extensive video tour of the CMS panel and show you how to manage your event.
+                If you don't  have the time for managing the app on your own, can do it for you.
             </p>
 
             <a class="services__button">
-                FREE
+                750 USD
             </a>
         </div>
     </article>
@@ -64,43 +68,44 @@
     <article class="services__types">
         <div class="services__type services__type--animated">
             <h3 class="services__type-name">
-                Mike Kopyra
+                LANGUAGE
             </h3>
 
             <p class="services__text">
-                Your dedicated assistant will conduct an extensive video tour of the CMS panel and show you how to manage your event.
+                Our app is currently available in 15 different languages (see the list), if your language is not there, let us know.
             </p>
 
             <a class="services__button">
-                FREE
+                REQUEST A NEW LANGUAGE
             </a>
         </div>
 
         <div class="services__type services__type--animated">
             <h3 class="services__type-name">
-                Mike Kopyra
+                WHITELABEL
             </h3>
 
             <p class="services__text">
-                Your dedicated assistant will conduct an extensive video tour of the CMS panel and show you how to manage your event.
+                No trace of Meeting Application anywhere in the app, just your branding.
             </p>
 
             <a class="services__button">
-                FREE
+                REQUEST PRICE
             </a>
         </div>
 
         <div class="services__type services__type--animated">
             <h3 class="services__type-name">
-                Mike Kopyra
+               CUSTOM FEATURE
             </h3>
 
             <p class="services__text">
-                Your dedicated assistant will conduct an extensive video tour of the CMS panel and show you how to manage your event.
+                You need a certain functionality, but can't find it on our list? <br />
+                Ask if we can add it to the app.
             </p>
 
             <a class="services__button">
-                FREE
+                REQUEST PRICE
             </a>
         </div>
     </article>
