--- a/src/pricing/services/services.scss
+++ b/src/pricing/services/services.scss
@@ -8,7 +8,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     padding: 20px 0;
     margin-top: 20px;
     z-index: 2;
@@ -58,6 +58,7 @@
     max-width: 100%;
     padding: 0 20px;
     margin-bottom: 40px;
+    flex-grow: 1;
   }
 
   &__button {
