ikonki app types

--- a/src/pricing/app-types/app-types.hbs
+++ b/src/pricing/app-types/app-types.hbs
@@ -6,10 +6,10 @@
     <p class="section__background-text app-types__background-text">
         APP TYPES
     </p>
-    
+
     <div class="app-types__type-container">
         <div class="app-types__logo">
-            <img  src="../../images/app-types-logo.png">
+            <img src="../../images/app-types-logo.png">
         </div>
 
         <div class="app-types__small-container">
@@ -34,57 +34,77 @@
 
                 <ul class="app-types__features-list">
                     <li class="app-types__feature">
-                        <img src="../../images/agenda.png" />
+                        <div class="app-types__feature--image">
+                            <img src="../../images/agenda.png" />
+                        </div>
                         Agenda
                     </li>
 
                     <li class="app-types__feature">
-                        <img src="../../images/agenda.png" />
-                        Agenda
+                        <div class="app-types__feature--image">
+                            <img src="../../images/mycalendar.png" />
+                        </div>
+                        My Calendar
                     </li>
 
                     <li class="app-types__feature">
-                        <img src="../../images/agenda.png" />
-                        Agenda
+                        <div class="app-types__feature--image">
+                            <img src="../../images/speakerprofiles.png" />
+                        </div>
+                        Speaker Profiles
                     </li>
 
                     <li class="app-types__feature">
-                        <img src="../../images/agenda.png" />
-                        Agenda
+                        <div class="app-types__feature--image">
+                            <img src="../../images/feedwall.png" />
+                        </div>
+                        Feedwall
                     </li>
 
                     <li class="app-types__feature">
-                        <img src="../../images/agenda.png" />
-                        Agenda
+                        <div class="app-types__feature--image">
+                            <img src="../../images/chat.png" />
+                        </div>
+                        Chat 1:1
                     </li>
 
                     <li class="app-types__feature">
-                        <img src="../../images/agenda.png" />
-                        Agenda
+                        <div class="app-types__feature--image">
+                            <img src="../../images/groups.png" />
+                        </div>
+                        Groups
                     </li>
 
                     <li class="app-types__feature">
-                        <img src="../../images/agenda.png" />
-                        Agenda
+                        <div class="app-types__feature--image">
+                            <img src="../../images/push-notifications.png" />
+                        </div>
+                        Push Notifications
                     </li>
 
                     <li class="app-types__feature">
-                        <img src="../../images/agenda.png" />
-                        Agenda
+                        <div class="app-types__feature--image">
+                            <img src="../../images/surveys.png" />
+                        </div>
+                        Surveys
                     </li>
 
                     <li class="app-types__feature">
-                        <img src="../../images/agenda.png" />
-                        Agenda
+                        <div class="app-types__feature--image">
+                            <img src="../../images/social-media.png" />
+                        </div>
+                        Social Media & News
                     </li>
 
                     <li class="app-types__feature">
-                        <img src="../../images/agenda.png" />
-                        Agenda
+                        <div class="app-types__feature--image">
+                            <img src="../../images/photobooth.png" />
+                        </div>
+                        Photo Booth
                     </li>
                 </ul>
 
-                <a  href="https://meetingapplication.com/get-your-app?type=plus" class="button app-types__button app-types__button--black">
+                <a href="https://meetingapplication.com/get-your-app?type=plus" class="button app-types__button app-types__button--black">
                     TEST FOR FREE FOR 14 DAYS
                 </a>
             </div>
@@ -116,57 +136,70 @@
                     </div>
 
                     <li class="app-types__feature">
-                        <img src="../../images/agenda.png" />
-                        Agenda
+                        <div class="app-types__feature--image">
+                            <img src="../../images/sponsors.png" />
+                        </div>
+                        Sponsors
                     </li>
 
                     <li class="app-types__feature">
-                        <img src="../../images/agenda.png" />
-                        Agenda
+                        <div class="app-types__feature--image">
+                            <img src="../../images/media.png" />
+                        </div>
+                        Media
                     </li>
 
                     <li class="app-types__feature">
-                        <img src="../../images/agenda.png" />
-                        Agenda
+                        <div class="app-types__feature--image">
+                            <img src="../../images/maps.png" />
+                        </div>
+                        Maps
                     </li>
 
                     <li class="app-types__feature">
-                        <img src="../../images/agenda.png" />
-                        Agenda
+                        <div class="app-types__feature--image">
+                            <img src="../../images/resources.png" />
+                        </div>
+                        Resources
                     </li>
 
                     <li class="app-types__feature">
-                        <img src="../../images/agenda.png" />
-                        Agenda
+                        <div class="app-types__feature--image">
+                            <img src="../../images/abstracts.png" />
+                        </div>
+                        Abstracts
                     </li>
 
                     <li class="app-types__feature">
-                        <img src="../../images/agenda.png" />
-                        Agenda
+                        <div class="app-types__feature--image">
+                            <img src="../../images/business-matching.png" />
+                        </div>
+                        Business Matching
                     </li>
 
                     <li class="app-types__feature">
-                        <img src="../../images/agenda.png" />
-                        Agenda
+                        <div class="app-types__feature--image">
+                            <img src="../../images/gamification.png" />
+                        </div>
+                        Gamification
                     </li>
 
                     <li class="app-types__feature">
-                        <img src="../../images/agenda.png" />
-                        Agenda
+                        <div class="app-types__feature--image">
+                            <img src="../../images/beacons.png" />
+                        </div>
+                        Beacons
                     </li>
 
                     <li class="app-types__feature">
-                        <img src="../../images/agenda.png" />
-                        Agenda
-                    </li>
-
-                    <li class="app-types__feature">
-                        <img src="../../images/agenda.png" />
-                        Agenda
+                        <div class="app-types__feature--image">
+                            <img src="../../images/banners.png" />
+                        </div>
+                        Banners
                     </li>
                 </ul>
 
-                <a  href="https://meetingapplication.com/get-your-app?type=premium" class="button app-types__button">
+                <a href="https://meetingapplication.com/get-your-app?type=premium" class="button app-types__button">
                     TEST FOR FREE FOR 14 DAYS
                 </a>
             </div>
@@ -178,7 +211,6 @@
             OR
         </span>
     </div>
-
 
     <div class="app-types__type-container">
         <div class="app-types__logo change-icon-interval">
@@ -217,53 +249,18 @@
                 </div>
 
                 <li class="app-types__feature">
-                    <img src="../../images/agenda.png" />
-                    Agenda
+                    <div class="app-types__feature--image">
+                        <img src="../../images/sponsors.png" />
+                    </div>
+
+                    Standalone Event App
                 </li>
 
                 <li class="app-types__feature">
-                    <img src="../../images/agenda.png" />
-                    Agenda
-                </li>
-
-                <li class="app-types__feature">
-                    <img src="../../images/agenda.png" />
-                    Agenda
-                </li>
-
-                <li class="app-types__feature">
-                    <img src="../../images/agenda.png" />
-                    Agenda
-                </li>
-
-                <li class="app-types__feature">
-                    <img src="../../images/agenda.png" />
-                    Agenda
-                </li>
-
-                <li class="app-types__feature">
-                    <img src="../../images/agenda.png" />
-                    Agenda
-                </li>
-
-                <li class="app-types__feature">
-                    <img src="../../images/agenda.png" />
-                    Agenda
-                </li>
-
-                <li class="app-types__feature">
-                    <img src="../../images/agenda.png" />
-                    Agenda
-                </li>
-
-                <li class="app-types__feature">
-                    <img src="../../images/agenda.png" />
-                    Agenda
-                </li>
-
-                <li class="app-types__feature">
-                    <img src="../../images/agenda.png" />
-                    Agenda
+                    <div class="app-types__feature--image">
+                        <img src="../../images/multipleevents.png" />
+                    </div>
+                    Multiple events in one app
                 </li>
             </ul>
 
