--- a/src/pricing/app-types/app-types.scss
+++ b/src/pricing/app-types/app-types.scss
@@ -110,6 +110,7 @@
     text-align: justify;
     font-size: 14px;
     padding: 20px;
+    height: 90px;
   }
 
   &__info {
@@ -147,15 +148,21 @@
 
   &__feature {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     font-weight: 700;
     margin-bottom: 10px;
-    font-size: 17px;
+    font-size: 15px;
+
+    &--image {
+      display: flex;
+      justify-content: flex-end;
+      width: 30px;
+    }
 
     img {
-      width: 15px;
-      height: 15px;
+      width: auto;
+      height: 13px;
       margin-right: 10px;
     }
   }
