--- a/src/pricing/hero/hero.hbs
+++ b/src/pricing/hero/hero.hbs
@@ -7,9 +7,9 @@
         YOUR NEEDS BEST
     </h1>
 
-    <div class="pricing-hero__applications">
+    <div class="pricing-hero__applications container">
         <div class="pricing-hero__app">
-            <div>
+            <div class="pricing-hero__phone">
                 <img src="../../images/application-meeting.png" />
             </div>
             <div class="pricing-hero__app-description">
@@ -36,7 +36,7 @@
             </div>
         </div>
 
-        <div class="pricing-hero__app">
+        <div class="pricing-hero__app pricing-hero__app--right">
             <div class="pricing-hero__app-description pricing-hero__app-description--right">
                 <div class="pricing-hero__company-logo change-icon-interval">
                     <img src="../../images/ikony_pricing/1_dhl.png" />
