--- a/src/pricing/app-types/app-types.scss
+++ b/src/pricing/app-types/app-types.scss
@@ -26,10 +26,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex-wrap: wrap;
   }
 
   &__small-container {
     display: flex;
+    flex-wrap: wrap;
   }
 
   &__background-text {
