--- a/src/pricing/difference/difference.hbs
+++ b/src/pricing/difference/difference.hbs
@@ -7,9 +7,9 @@
         DIFFERENCE
     </p>
 
-    <div class="difference__applications">
+    <div class="difference__applications container">
         <div class="difference__app">
-            <div>
+            <div class="difference__phone">
                 <img src="../../images/application-meeting.png" />
 
                 <a onclick="gotoAppTypes()" class="button button--small">
