--- a/src/pricing/hero/pricing-hero.scss
+++ b/src/pricing/hero/pricing-hero.scss
@@ -108,6 +108,12 @@
       }
     }
 
+    &:last-child {
+      @media (max-width: 500px) {
+        margin-top: 50px !important;
+      }
+    }
+
     > div:first-child {
       margin-right: 20px;
     }
