--- a/src/pricing/app-types/app-types.scss
+++ b/src/pricing/app-types/app-types.scss
@@ -46,6 +46,7 @@
     max-width: 310px;
     padding-bottom: 15px;
     margin: 5px;
+    margin-top: 30px;
     flex-grow: 1;
     transition: 50ms ease-in-out;
     min-height: 650px;
