--- a/src/pricing/difference/difference.hbs
+++ b/src/pricing/difference/difference.hbs
@@ -18,7 +18,7 @@
                 </a>
             </div>
             <div class="difference__app-description">
-                <div class="difference__company-logo">
+                <div class="difference__company-logo difference__company-logo--bigger">
                     <img src="../../images/app-types-logo.png" />
                 </div>
 
