--- a/src/pricing/hero/hero.hbs
+++ b/src/pricing/hero/hero.hbs
@@ -13,7 +13,7 @@
                 <img src="../../images/application-meeting.png" />
             </div>
             <div class="pricing-hero__app-description">
-                <div class="pricing-hero__company-logo">
+                <div class="pricing-hero__company-logo pricing-hero__company-logo--bigger">
                     <img  src="../../images/app-types-logo.png">
                 </div>
 
