--- a/src/pricing/difference/difference.scss
+++ b/src/pricing/difference/difference.scss
@@ -19,6 +19,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 1000px;
 
     @media (max-width: 768px) {
       justify-content: center;
@@ -97,6 +98,13 @@
     margin-bottom: 20px;
     margin-left: -15px;
     margin-right: -15px;
+
+    &--bigger {
+      width: 155px;
+      margin-left: -25px;
+      margin-top: -5px;
+      margin-bottom: 26px;
+    }
   }
 
   &__company-name {
