filmiki dla difference

--- a/src/pricing/difference/difference.hbs
+++ b/src/pricing/difference/difference.hbs
@@ -10,7 +10,12 @@
     <div class="difference__applications container">
         <div class="difference__app">
             <div class="difference__phone">
-                <img src="../../images/application-meeting.png" />
+                <div class="difference__phone-video-container">
+                    <button data-id="difference1" class="difference__video-play"></button>
+                    <video id="difference1" class="difference__video">
+                        <source src="../../images/1.mov" type="video/mp4">
+                    </video>
+                </div>
 
                 <a onclick="gotoAppTypes()" class="button button--small">
                     I CHOOSE THIS
@@ -63,15 +68,11 @@
                 </ul>
             </div>
             <div class="difference__phone">
-                <img src="../../images/application-meeting.png" />
-
-                <div class="difference__phone-icon change-icon-interval">
-                    <img src="../../images/ikony_pricing/1_dhl.png" />
-                    <img src="../../images/ikony_pricing/2_care.png" />
-                    <img src="../../images/ikony_pricing/3_raindance.png" />
-                    <img src="../../images/ikony_pricing/4_santander.png" />
-                    <img src="../../images/ikony_pricing/5_sunny side.png" />
-                    <img src="../../images/ikony_pricing/6_eu com.png" />
+                <div class="difference__phone-video-container">
+                    <button data-id="difference2" class="difference__video-play"></button>
+                    <video id="difference2" class="difference__video">
+                        <source src="../../images/2.mov" type="video/mp4">
+                    </video>
                 </div>
 
 
