--- a/src/pricing/difference/difference.scss
+++ b/src/pricing/difference/difference.scss
@@ -142,10 +142,10 @@
 
   &__video {
     position: absolute;
-    left: 11px;
-    top: 20px;
-    width: 90%;
-    height: 90%;
+    left: 12px;
+    top: 48px;
+    width: 186px;
+    height: 335px;
   }
 
   &__video-play {
