--- a/src/pricing/app-types/app-types.hbs
+++ b/src/pricing/app-types/app-types.hbs
@@ -25,7 +25,7 @@
                 </div>
 
                 <span class="app-types__name-description">
-                    That’s a perfect app if you need solid fundations.
+                    That's a perfect app if you need solid fundations.
                 </span>
 
                 <span class="app-types__price">
@@ -121,7 +121,7 @@
                 </div>
 
                 <span class="app-types__name-description">
-                    If your event is complex, that’s the app type you’re looking for. More features, more possibilities.
+                    If your event is complex, that's the app type you're looking for. More features, more possibilities.
                 </span>
 
                 <span class="app-types__price app-types__price--premium">
@@ -234,7 +234,7 @@
             </div>
 
             <span class="app-types__name-description">
-                Organizing a couple of events during the year? That’s the app type for you.
+                Organizing a couple of events during the year? That's the app type for you.
             </span>
 
             <span class="app-types__price">
