--- a/src/pricing/rest/rest-assured.hbs
+++ b/src/pricing/rest/rest-assured.hbs
@@ -37,7 +37,7 @@
     <div class="rest__element">
         <div class="rest__text">
             <span class="rest__text-info--blue">
-                You don’t need
+                You don't need
             </span>
             <span class="rest__text-info">
                 to provide data about your credit card
