--- a/src/pricing/app-types/app-types.hbs
+++ b/src/pricing/app-types/app-types.hbs
@@ -13,7 +13,7 @@
         </div>
 
         <div class="app-types__small-container">
-            <div class="app-types__type">
+            <div data-type="plus" class="app-types__type">
                 <div class="app-types__type-name-container">
                     <h2 class="app-types__name">
                         PLUS
@@ -109,7 +109,7 @@
                 </a>
             </div>
 
-            <div class="app-types__type app-types__type--premium">
+            <div data-type="premium" class="app-types__type app-types__type--premium">
                 <div class="app-types__type-name-container app-types__type-name-container--premium">
                     <h2 class="app-types__name app-types__name--premium">
                         PREMIUM
@@ -222,7 +222,7 @@
             <img src="../../images/ikony_pricing/6_eu com.png" />
         </div>
 
-        <div class="app-types__type">
+        <div data-type="standalone" class="app-types__type">
             <div class="app-types__type-name-container">
                 <h2 class="app-types__name">
                     STAND-ALONE
