--- a/src/pricing/difference/difference.hbs
+++ b/src/pricing/difference/difference.hbs
@@ -17,7 +17,7 @@
                     </video>
                 </div>
 
-                <a onclick="gotoAppTypes()" class="button button--small">
+                <a onclick="gotoAppTypes('premium')" class="button button--small">
                     I CHOOSE THIS
                     <img class="core-features__button__icon" src="../../images/next.svg" />
                 </a>
@@ -76,7 +76,7 @@
                 </div>
 
 
-                <a onclick="gotoAppTypes()" class="button button--small">
+                <a onclick="gotoAppTypes('standalone')" class="button button--small">
                     I CHOOSE THIS
                     <img class="core-features__button__icon" src="../../images/next.svg" />
                 </a>
