--- a/src/pricing/hero/hero.hbs
+++ b/src/pricing/hero/hero.hbs
@@ -29,7 +29,7 @@
                     Your event inside our hosted app.
                 </span>
 
-                <a onclick="gotoAppTypes()" class="button button--medium">
+                <a onclick="gotoAppTypes('premium')" class="button button--medium">
                     I CHOOSE THIS
                     <img class="core-features__button__icon" src="../../images/next.svg" />
                 </a>
@@ -59,7 +59,7 @@
                     Your event inside your own dedicated app.
                 </span>
 
-                <a onclick="gotoAppTypes()" class="button button--medium">
+                <a onclick="gotoAppTypes('standalone')" class="button button--medium">
                     I CHOOSE THIS
                     <img class="core-features__button__icon" src="../../images/next.svg" />
                 </a>
