--- a/src/pricing/app-types/app-types.scss
+++ b/src/pricing/app-types/app-types.scss
@@ -54,7 +54,7 @@
       padding-top: 0;
     }
 
-    &:hover {
+    &.active {
       transform: scale(1.1);
       box-shadow: 0px 0px 17px 1px rgba(0, 0, 0, 0.3);
     }
