--- a/src/head.hbs
+++ b/src/head.hbs
@@ -1,7 +1,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,600,700,800" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" rel="stylesheet" />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="application/ld+json">
       {
       "@context": "http://schema.org/",
