--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,4 +1,3 @@
-
 * {
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -6,6 +5,7 @@
   text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
   z-index: 1;
   position: relative;
+  box-sizing: border-box;
 }
 
 html {
