--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -1,5 +1,3 @@
-
-
 .nav {
   position: fixed;
   top: 0;
@@ -15,7 +13,7 @@
   margin: 0 auto;
   align-items: center;
   max-width: 1170px;
-  height: 47px;
+  height: 68px;
   position: initial;
 }
 
@@ -63,7 +61,7 @@
   }
 
   .nav_menu--visible {
-    height: 280px;
+    height: 400px;
   }
 }
 
@@ -80,34 +78,30 @@
   font-weight: 400;
   font-size: 14px;
   margin-left: 25px;
-}
 
-.nav__button:last-child {
-  margin-left: 10px;
-}
-
-@media (max-width: 500px) {
-  .nav__button {
-    display: none;
+  @media (max-width: 995px) {
+    display: none !important;
   }
-}
 
-.nav__button--responsive {
-  display: none !important;
-}
+  :last-child {
+    margin-left: 10px;
+  }
 
-@media (max-width: 500px) {
-  .nav__button--responsive {
-    display: block;
-    margin: 0;
-    text-align: center;
-    margin:  5px;
-    padding: 5px;
+  &--responsive {
+    display: none !important;
+
+    @media (max-width: 995px) {
+      display: block !important;
+      text-align: center;
+      line-height: 20px;
+      margin:  10px !important;
+      padding: 5px !important;
+    }
   }
 }
 
 .nav__link {
-  margin: 5px;
+  margin: 10px;
   padding: 5px;
   display: flex;
   justify-content: center;
